NEXT - 2011-06-29 18:00
====

    * Check locally for bad ip first
    * Redirect to base instead of crash when short url doesnt exists
    * Add warning for illegal and porn link on home page

1.8 - 2011-06-27 01:10
=====

    * Improve cleaner (remove application/octet-stream)

1.7 - 2011-06-27 00:50
=====

    * Add link to analyzer (stats and short)
    * Add API on screen

1.6 - 2011-06-26 17:30
=====

    * Improve analyze, only one per hour per link
    * Rescan bad link once per day
    * Rescan all link once per week

1.5 - 2011-06-26 15:30
=====

    * Use Dancer::Plugin::Redis 0.3 (revamp from me, look at github)

1.4 - 2011-06-07 23:40
=====

    * Add stats in db (will be show in next release in a tab)
    * add reset top10

1.3 - 2011-05-01 14:00
=====

    * Add spinner for loading
    * Add perlbot for crawler

1.2 - 2011-05-01 12:00
=====

    * Make api check url light (only ip)
    * Improve javascript key block
    * Improve BAD URL message and detection
    * Remove word extraction
    * Add short content extraction (prepare for Tags page)
    
1.1 - 2011-04-29 10:45
=====

    * Bookmarklet for facebook in a window

1.0 - 2011-04-29 08:00
=====

    * Add share to facebook
    * Add icon for twitter and facebook

0.9 - 2011-04-25 23:05
=====

    * Exclude robots to count clicks and clicks uniq

0.8 - 2011-04-21 19:10
=====

    * Use OurPackageVersion to fix issue with perlcritic
    * Fix missing use strict in app

0.7 - 2011-04-17 21:00
=====

    * Remove missing title method to async fetch title
      This will be replace by a content analyzer
    * Add link check (porn/illegal) and status
    * Add content analyzer, extract words
    * Add categorizer

0.6 - 2011-04-12 19:30
=====

    * Add changelog in tabs

0.5 - 2011-04-12 17:00
=====

    * Add version at the bottom of each page

0.4 - 2011-04-10 15:30
=====

    * Auto-install with Dist::Zilla release
    * Pod Everything
    * Improve readability
    * Pass all test
