@@ -15,9 +15,6 @@ use App::Main;
 #Root : Match only /
 use App::Root;
 
-#Stats : Match any short url with params s=1
-use App::Stats;
-
 #Redirect : redirect to the long url, accept api a=1
 #This part should be execute after all overs
 use App::Redirect;
