@@ -1,0 +1,32 @@
+<h3 class="caps">Your stats</h3>
+<form class="inline" method="post">
+    <fieldset>
+        <div class="span-13 last">
+            <label for="url_r" class="span-2">Your URL</label>
+            <input type="text" name="url_r" class="text readonly" value="<% stats.url %>"/>
+            <button href="<% stats.url %>" target="_blank" class="last">Go &gt;&gt;</button>
+        </div>
+        <div class="span-13 last">
+            <label for="shorturl_r" class="span-2">Short URL</label>
+            <input type="text" name="shorturl_r" class="text readonly" value="<% stats.short_url %>"/>
+            <button href="<% stats.short_url %>" target="_blank" class="last">Go &gt;&gt;</button>
+        </div>
+        <div class="span-13 last">
+            <label for="url_r_created_at" class="span-2">Created at</label>
+            <input type="text" name="url_r_created_at" class="text readonly" value="<% stats.created_at %>"/>
+        </div>
+        <div class="span-13 last">
+            <label for="url_r_last_accessed_at" class="span-2">Last click at</label>
+            <input type="text" name="url_r_last_accessed_at" class="text readonly" value="<% stats.last_accessed_at %>"/>
+        </div>
+        <div class="span-13 last">
+            <label for="url_r_clicks" class="span-2">Clicks</label>
+            <input type="text" name="url_r_clicks" class="text readonly" value="<% stats.clicks %>"/>
+        </div>
+        <div class="span-13 last">
+            <label for="url_r_clicks_uniq" class="span-2">Uniq clicks</label>
+            <input type="text" name="url_r_clicks_uniq" class="text readonly" value="<% stats.clicks_uniq %>"/>
+        </div>
+    </fieldset>
+</form>
+
