@@ -1,35 +1,0 @@
-<h3 class="caps">Your stats</h3>
-<form class="inline" method="post">
-    <fieldset>
-        <div class="span-23 last">
-            <label for="url_r" class="span-2">Your URL</label>
-            <input type="text" name="url_r" class="text readonly" value="<% url %>"/>
-            <button href="<% url %>" target="_blank" class="last">Go &gt;&gt;</button>
-        </div>
-        <div class="span-23 last">
-            <label for="shorturl_r" class="span-2">Short URL</label>
-            <input type="text" name="shorturl_r" class="text readonly" value="<% short_url %>"/>
-            <button href="<% short_url %>" target="_blank" class="last">Go &gt;&gt;</button>
-        </div>
-        <div class="span-23 last">
-            <label for="url_r_created_at" class="span-2">Created at</label>
-            <input type="text" name="url_r_created_at" class="text readonly" value="<% created_at %>"/>
-        </div>
-        <div class="span-23 last">
-            <label for="url_r_last_accessed_at" class="span-2">Last click at</label>
-            <input type="text" name="url_r_last_accessed_at" class="text readonly" value="<% last_accessed_at %>"/>
-        </div>
-        <div class="span-23 last">
-            <label for="url_r_clicks" class="span-2">Clicks</label>
-            <input type="text" name="url_r_clicks" class="text readonly" value="<% clicks %>"/>
-        </div>
-        <div class="span-23 last">
-            <label for="url_r_clicks_uniq" class="span-2">Uniq clicks</label>
-            <input type="text" name="url_r_clicks_uniq" class="text readonly" value="<% clicks_uniq %>"/>
-        </div>
-    </fieldset>
-</form>
-
-<% IF error_message %><div class="error"><% error_message %></div><% END %>
-<% IF notice_message %><div class="notice"><% notice_message %></div><% END %>
-
